// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlsUnit/columnScrollReact/ApplyCssTransform/PositionDependentStylesComponent styles for float. 1`] = `
<style
  data-qa="ColumnScrollReact__position-styles"
>
  .js-controls-ColumnScrollReact_rootElement_guid123 {transform:translate3d(-231.324px,0,0);}.js-controls-ColumnScrollReact_fixed_guid123 {transform:translate3d(231.324px,0,0);}.js-controls-ColumnScrollReact_fixed-toRightEdge_guid123 {transform:translate3d(-968.6759999999999px,0,0);
</style>
`;

exports[`ControlsUnit/columnScrollReact/ApplyCssTransform/PositionDependentStylesComponent styles for integer. 1`] = `
<style
  data-qa="ColumnScrollReact__position-styles"
>
  .js-controls-ColumnScrollReact_rootElement_guid123 {transform:translate3d(-107px,0,0);}.js-controls-ColumnScrollReact_fixed_guid123 {transform:translate3d(107px,0,0);}.js-controls-ColumnScrollReact_fixed-toRightEdge_guid123 {transform:translate3d(-327px,0,0);
</style>
`;
